--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -8,23 +8,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
-<a href="_feature_detector_8hpp_source.html"/>
 <a href="_feature_proccesor_and_classifier_8hpp_source.html"/>
 <a href="_file_loader_8hpp_source.html"/>
-<a href="_film_shot_classifier_8hpp_source.html"/>
 <a href="_film_statistic_eval_8hpp_source.html"/>
+<a href="_haar_detector_8hpp_source.html"/>
 <a href="_result_displayer_8hpp_source.html"/>
+<a href="_shot_classifier_8hpp_source.html"/>
+<a href="_shot_evaluator_8hpp_source.html"/>
 <a href="_test_dataset_eval_8hpp_source.html"/>
 <a href="_user_structs_8hpp_source.html"/>
 <a href="annotated.html"/>
-<a href="class_feature_detector-members.html"/>
-<a href="class_feature_detector.html"/>
-<a href="class_feature_detector.html#a096c5a957a82c0f695900bb822b38acf"/>
-<a href="class_feature_detector.html#a260abfa490e239110e83661d2fb91e9a"/>
-<a href="class_feature_detector.html#a26de374727fa0799058476a9dea37986"/>
-<a href="class_feature_detector.html#a689e1c3cf0e783d34492a9f7b218b355"/>
-<a href="class_feature_detector.html#ae0c4a92ac795bdcb788e24a2932c763f"/>
-<a href="class_feature_detector.html#afadfbf4a61a045ce18b3b4462139a601"/>
 <a href="class_film_statistics-members.html"/>
 <a href="class_film_statistics.html"/>
 <a href="class_film_statistics.html#a0db3c6c590435d26d69d2548f9234102"/>
@@ -65,6 +58,14 @@
 <a href="class_film_statistics.html#adcb8d25b5e6af99172db42a46ac0d058"/>
 <a href="class_film_statistics.html#ae2bf70b89811a94f3bfb22a1b227a557"/>
 <a href="class_film_statistics.html#af686ff8e1b6a5e2254e60a0b9369f7e0"/>
+<a href="class_haar_detector-members.html"/>
+<a href="class_haar_detector.html"/>
+<a href="class_haar_detector.html#a1ca44227ab0ae5523b319ac7a8e72dc2"/>
+<a href="class_haar_detector.html#a36ec22b7470334205b45f33336d341e1"/>
+<a href="class_haar_detector.html#a4e9ba229da4b46df4cbbfdbea15998d5"/>
+<a href="class_haar_detector.html#a71e0d30aba39408512d1481ad6c452c3"/>
+<a href="class_haar_detector.html#a79634b7bbb31ddf91768109391c3396e"/>
+<a href="class_haar_detector.html#a82093b37e3cc217396da10b3b36d5526"/>
 <a href="class_image_loader-members.html"/>
 <a href="class_image_loader.html"/>
 <a href="class_image_loader.html#a15dedf31b1d1f5ce468b475018f39adc"/>
@@ -95,6 +96,8 @@
 <a href="class_shot_classifier-members.html"/>
 <a href="class_shot_classifier.html"/>
 <a href="class_shot_classifier.html#ae0c96ea1a429bba7ef9e7f7801f7b12c"/>
+<a href="class_shot_evaluator-members.html"/>
+<a href="class_shot_evaluator.html"/>
 <a href="class_shot_feature_extractor-members.html"/>
 <a href="class_shot_feature_extractor.html"/>
 <a href="class_shot_feature_extractor.html#a0abf6aac96e0abed7db4223f4be951c6"/>
